[package]
authors = ["Mathias Fiedler"]
edition = "2018"
license = "MIT"
name = "planthub"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
defmt = "0.2.1"
defmt-rtt = "0.2.0"
embassy = {version = "0.1.0", features = ["defmt"]}
embassy-nrf = {version = "0.1.0", features = ["defmt", "52832"]}
panic-probe = "0.2.0"

[patch.crates-io]
embassy = {git = "https://github.com/embassy-rs/embassy"}
embassy-nrf = {git = "https://github.com/embassy-rs/embassy"}

[features]
default = ["defmt-default", "nrf52832"]
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []
nrf52832 = []

[[bin]]
bench = false
name = "planthub"
test = false
