[package]
authors = ["Mathias Fiedler"]
edition = "2018"
license = "MIT"
name = "planthub"
version = "0.1.0"

[dependencies]
arrayvec = {version = "0.7.0", default-features = false}
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
defmt = "0.2.1"
defmt-rtt = "0.2.0"
embassy = {version = "0.1.0", features = ["defmt"]}
embassy-extras = {version = "0.1.0"}
embassy-nrf = {version = "0.1.0", features = ["defmt", "nrf52832"]}
embassy-traits = {version = "0.1.0", features = ["defmt"]}
futures = {version = "0.3.15", default-features = false}
futures-intrusive = {version = "0.4.0", default-features = false}
futures-util = {version = "0.3.15", default-features = false}
panic-probe = "0.2.0"

[dependencies.nrf52832-hal]
default-features = false
features = ["xxAA-package", "rt"]
version = "0.12.1"

[dependencies.nrf-softdevice]
features = ["nrf52832", "s112", "defmt", "defmt-trace", "ble-peripheral", "ble-gatt-server"]
version = "0.1.0"

[patch.crates-io]
embassy = {git = "https://github.com/embassy-rs/embassy"}
embassy-extras = {git = "https://github.com/embassy-rs/embassy"}
embassy-nrf = {git = "https://github.com/embassy-rs/embassy"}
embassy-traits = {git = "https://github.com/embassy-rs/embassy"}
nrf-softdevice = {git = "https://github.com/akiles/nrf-softdevice/"}

[features]
default = ["defmt-default", "nrf52832"]
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []
nrf52832 = []

[[bin]]
bench = false
name = "planthub"
test = false
